The upgrade ring: nine cells, pack centered, diamonds on Reinforced
Alex's playtest calls: every pack recipe fills ALL nine cells, the previous
tier's pack sits in the CENTER, and Reinforced takes diamonds. Composition
delegated: every upgrade is a two-material RING - bulk hide/plating on the
edges, fittings on the corners - so each recipe pictures its tier's art.

  canvas      wool edges / string corners / chest heart (raw craft, same ring)
  leather     leather edges / copper-ingot corners (the buckle, visible)
  studded     leather edges / cut-copper corners (studs as worked copper)
  reinforced  iron edges / DIAMOND corners (Alex's call)
  runed       amethyst edges / echo-shard corners (Deep Dark gate kept)
  dragonhide  shulker-shell edges / dragon's-breath corners

Studs-copper/plates-iron also fixes the old art swap (studs were brass in the
art but charged iron; reinforced was steel but charged copper).

- PackUpgradeRecipe is genuinely shaped now: (from, to, edges, corners) plain
  Ingredients; matches() demands a 3x3 (CraftingInput trims, so a gapped ring
  can't be 3x3), pack at cell 4, edges on odd cells, corners on the rest.
  Rotations/mirrors free; edges and corners NOT interchangeable (gametest pins
  the swapped ring as a non-match). Underpay stays closed by construction: all
  nine cells occupied = vanilla charges one per cell, full price, always.
  material2/count2 and SizedIngredient are gone; 5-field composite codec.
- JEI draws the positioned ring (createAndSetInputs 3x3, getWidth/getHeight=3,
  no shapeless marker); getIngredients() stays the honest row-major ring - it
  is still what gets the recipe past JEI's validator.
- Handbook/README/PUBLISHING/CHANGELOG/DECISIONS updated; Alex's constraints
  recorded as his calls. runData clean; 45 GameTests green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>